--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dart_vlc: ^0.0.7
+  dart_vlc: ^0.1.9
   filepicker_windows: ^2.0.0
-  provider: ^5.0.0
+  provider: ^6.0.2
 
-# dev_dependencies:
+dev_dependencies:
+  flutter_lints: ^1.0.4
+
 flutter:
   uses-material-design: true
 
