--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tiny_compiler
-description: Tiny Scanner
+description: Compiler Frontend (Tiny)
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
@@ -22,4 +22,4 @@ flutter:
 
   assets:
     - assets/images/dots_vert.png
-    - assets/audio/meow01.wav
+    # - assets/audio/meow01.wav
